js/js.translator/testData/incremental/invalidation/class/lib1/l1.0_simple_class.kt
// TODO: After KT-51088, m.kt from main module must be dirty
class Demo(val x: Int) {
}
